Bug 285885 - Playlist lists AudioCD entries as unavailable (greyed out)
Summary: Playlist lists AudioCD entries as unavailable (greyed out)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/CD (other bugs)
Version First Reported In: 2.5-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 285877 297192 297745 298645 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-06 11:19 UTC by Philipp Schmidt
Modified: 2012-05-23 03:16 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Schmidt 2011-11-06 11:19:12 UTC
Version:           2.5-git (using KDE 4.7.3) 
OS:                Linux

Entries of an AudioCD in the Playlist are greyed out (as for Tracks that are currently not available). The CD is in the Drive and Amarok can play the tracks but this prevents Amarok from automatic track changing.

Phonon-Backend: VLC

Note: With GStreamer the tracks don't even play.

Reproducible: Always

Steps to Reproduce:
Insert Audio CD, Add tracks to playlist.

Actual Results:  
Tracks are greyed out.

Expected Results:  
Tracks are marked as available.

OS: Linux (x86_64) release 3.0-ARCH
Compiler: gcc
Comment 1 Philipp Schmidt 2011-11-06 11:22:14 UTC
Set the wrong version, I meant to select 2.4-git, not 2.5-git...
Comment 2 Myriam Schweingruber 2011-11-07 07:26:51 UTC
I will leave it to 2.5-git, as this will be changed any day now anyway.
Comment 3 Nick 2012-01-04 01:16:25 UTC
I have a similar problem to this on 2.5.0 using Fedora 16 (Linux (x86_64) release 3.1.6-1.fc16.x86_64). Everything seems to work normal, if I double click on the tracks they will play, but it won't play through a playlist automatically.
Comment 4 Myriam Schweingruber 2012-01-04 07:24:57 UTC
Nick: your description doesn't seem to match this bug. Please try another phonon backend, I guess you use the gstreamer backend, right?
Comment 5 Myriam Schweingruber 2012-01-04 07:26:02 UTC
Philipp: do these tracks have some special characters?
Comment 6 Philipp Schmidt 2012-01-04 07:47:30 UTC
Myriam: No they don't

Nick: If your tracks are greyed out too then this is the right problem. With automatic track changing I meant that amarok followed the playlist.
Comment 7 Nick 2012-01-04 13:57:07 UTC
I am using the gstreamer backend, but it worked fine in previous versions. It only does with with Audio CDs, music from the local hard drive works just fine when added to a playlist.
Comment 8 Myriam Schweingruber 2012-01-04 23:46:46 UTC
It could be worth to try the phonon-backend-vlc, just to make sure it is not backend related.
Comment 9 Nick 2012-01-05 14:30:03 UTC
I get the same problem using the vlc-backend.
Comment 10 Myriam Schweingruber 2012-01-05 15:58:40 UTC
Thank you for the feedback.
Comment 11 Carlos Alberto Espinal 2012-02-01 09:43:42 UTC
I can confirm this bug. It occurs with both gstreamer and VLC backends. Songs show greyed out. I can play one at a time, but the playlist will skip them automatically.
Comment 12 Bart Cerneels 2012-02-15 09:35:39 UTC
Git commit dbee445a5a48acb11cc4d9af94f7c5e705c7d2d2 by Bart Cerneels.
Committed on 15/02/2012 at 09:51.
Pushed by shanachie into branch 'master'.

Don't mark audio-CD tracks as unplayable.

They are just always enabled until we have a good way to detect the
correct CD is present.
FIXED-IN: 2.6

M  +1    -0    ChangeLog
M  +2    -7    src/core-impl/collections/audiocd/AudioCdMeta.cpp

http://commits.kde.org/amarok/dbee445a5a48acb11cc4d9af94f7c5e705c7d2d2
Comment 13 Myriam Schweingruber 2012-04-01 22:27:51 UTC
*** Bug 297192 has been marked as a duplicate of this bug. ***
Comment 14 Myriam Schweingruber 2012-04-09 00:43:08 UTC
*** Bug 297745 has been marked as a duplicate of this bug. ***
Comment 15 Ilya Potapov 2012-04-26 14:44:59 UTC
*** Bug 298645 has been marked as a duplicate of this bug. ***
Comment 16 Myriam Schweingruber 2012-05-06 12:09:41 UTC
*** Bug 285877 has been marked as a duplicate of this bug. ***
Comment 17 dangersofpants 2012-05-23 03:16:19 UTC
Bug still persists. 2.5 here with phonon-vlc-backend