Don't mark audio-CD tracks as unplayable.

They are just always enabled until we have a good way to detect the
correct CD is present.

BUG: 285885
FIXED-IN: 2.6